Bug 98258 - [BXT] [IGT] pm_rpm universal-planes produces a Test assertion failure
Summary: [BXT] [IGT] pm_rpm universal-planes produces a Test assertion failure
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-14 15:00 UTC by Luis Botello
Modified: 2017-07-24 22:40 UTC (History)
2 users (show)

See Also:
i915 platform: BXT
i915 features: display/Other


Attachments
dmesg (212.15 KB, text/plain)
2016-10-14 15:00 UTC, Luis Botello
no flags Details

Description Luis Botello 2016-10-14 15:00:08 UTC
Created attachment 127300 [details]
dmesg

Description:
=====================================================
pm_rpm subtest universal-planes produces a Test assertion failure.

Steps to reproduce:
========================================================
#./pm_rpm --run-subtest universal-planes

Software Config:
=====================================================
Kernel:
commit f35ed31aea66b3230c366fcba5f3456ae2cb956e
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Mon Oct 10 14:29:09 2016 +0300
    drm-intel-nightly: 2016y-10m-10d-11h-28m-51s UTC integration manifest

drm:
  tag: libdrm-2.4.71
  commit: a44c9c31b7b38b3eedf3d26648f9e68dcc377c4c
mesa:
  tag: mesa-12.0.0
  commit: 8b06176f310f65628ce136b90a99005278ba5e0d
cairo:
  tag: 1.15.2
  commit: db8a7f1697c49ae4942d2aa49eed52dd73dd9c7a
xorg-server-macros:
  tag: util-macros-1.19.0-2-gd7acec2
  commit: d7acec2d3a3abe79814ceb72e2c0d4d95ed31d37
xserver:
  tag: xorg-server-1.18.99.901-76-g97a8353
  commit: 97a8353ec1192d8d3bd2ebb99e5687cb91427e09
xf86-video-intel:
  tag: 2.99.917-712-g696f58f
  commit: 696f58f69f2bac5717d19f7a1a2278fee50a083e
libva:
  tag: libva-1.7.2-38-g3b7e499
  commit: 3b7e4999950a04fabd42edbead8c2f24c6cdf3cf
vaapi-intel-driver:
  tag: 1.7.2-133-gdd73514
  commit: dd73514209d7942f2d8c8b0bbb541fe6884ea1bc

Hardware Config:
========================================================
Platform                        : BXT-P
Motherboard model               : Broxton P
Motherboard type                : NOTEBOOK Hand Held
Motherboard manufacturer        : Intel Corp.
CPU family                      : Other
CPU information                 : 06/5c
GPU Card                        : Intel Corporation Device 5a84 (rev 0a) (prog-if 00 [VGA controller])


IGT output:
=====================================================
IGT-Version: 1.16-g48a9e1e (x86_64) (Linux: 4.8.0-nightly+ x86_64)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: !(fd<0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: drmSetMaster(fd) == 0
(pm_rpm:3379) igt-kms-DEBUG: VT: graphics mode set (mode was 0x0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=3840, height=2160, format=0x34325258, tiling=0x0, size=0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=2, pitch=15360)
Runtime PM support: 1
PC8 residency support: 0
(pm_rpm:3379) DEBUG: Test requirement passed: has_runtime_pm
(pm_rpm:3379) igt-core-DEBUG: Starting subtest: universal-planes
(pm_rpm:3379) DEBUG: Test requirement passed: default_mode_params
(pm_rpm:3379) DEBUG: Test requirement passed: rc == 0
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=3, pitch=7680)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=4, pitch=7680)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325241, tiling=0x0, size=0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=5, pitch=256)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325241, tiling=0x0, size=0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=6, pitch=256)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=7, pitch=512)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=8, pitch=512)
(pm_rpm:3379) CRITICAL: Test assertion failure function test_one_plane, file pm_rpm.c:1631:
(pm_rpm:3379) CRITICAL: Failed assertion: rc == 0
(pm_rpm:3379) CRITICAL: Last errno: 22, Invalid argument
(pm_rpm:3379) CRITICAL: error: -22 != 0
Stack trace:
  #0 [__igt_fail_assert+0xf1]
  #1 [planes_subtest+0x7d2]
  #2 [main+0xc75]
  #3 [__libc_start_main+0xf0]
  #4 [_start+0x29]
  #5 [<unknown>+0x29]
Subtest universal-planes failed.
**** DEBUG ****
(pm_rpm:3379) DEBUG: Test requirement passed: default_mode_params
(pm_rpm:3379) DEBUG: Test requirement passed: rc == 0
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=3, pitch=7680)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=4, pitch=7680)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325241, tiling=0x0, size=0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=5, pitch=256)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325241, tiling=0x0, size=0)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=6, pitch=256)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=7, pitch=512)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=64, height=64, format=0x34325258, tiling=0x100000000000001, size=0)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(pm_rpm:3379) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=8, pitch=512)
(pm_rpm:3379) CRITICAL: Test assertion failure function test_one_plane, file pm_rpm.c:1631:
(pm_rpm:3379) CRITICAL: Failed assertion: rc == 0
(pm_rpm:3379) CRITICAL: Last errno: 22, Invalid argument
(pm_rpm:3379) CRITICAL: error: -22 != 0
****  END  ****
Subtest universal-planes: FAIL (20.684s)
(pm_rpm:3379) igt-core-DEBUG: Exiting with status code 99
(pm_rpm:3379) igt-kms-DEBUG: VT: original mode 0x0 restored

Attachments:
=====================================================
dmesg
Comment 1 Matt Roper 2017-01-13 20:09:38 UTC
I believe this should be fixed by this patch:

https://patchwork.freedesktop.org/patch/133153/
Comment 2 Jani Nikula 2017-01-16 10:00:23 UTC
Matt, thanks for the patch, but we don't close bugs until the fixes have actually landed in git. Reopened.
Comment 3 Matt Roper 2017-01-17 22:35:53 UTC
Actually, Ville wrote a nearly identical patch a couple months ago:

  https://patchwork.freedesktop.org/patch/120204/

but somehow it never got reviewed.  I just gave his patch my r-b and pushed it to dinq, so now I think we can move it to resolved.  Sorry for the confusion before.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.